<resources>
    <!-- MainActivity -->
    <string name="app_name">Court Count</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>

    <string name="for_three_points">+ 3 Points</string>
    <string name="for_two_points">+ 2 Points</string>
    <string name="free_throw">Free Throw</string>
    <string name="restart">Restart</string>

    <!-- teamsNames -->
    <string name="give_team_names">Enter teams' names:</string>
</resources>
